--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -38,7 +38,7 @@
               <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
             </ion-avatar>
             <h2>FName LName</h2>
-            <p ion-text item-right color="in">+7.30$</p>
+            <p ion-text item-right color="in">+7.30$ IN</p>
           </ion-item>
         </ion-item-group>
 
@@ -49,7 +49,7 @@
             <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
           </ion-avatar>
           <h2>FName LName</h2>
-          <p ion-text item-right color="out">-5.45$</p>
+          <p ion-text item-right color="out">-5.45$ OUT</p>
         </ion-item>
 
         <ion-item>
@@ -57,7 +57,7 @@
             <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
           </ion-avatar>
           <h2>FName LName</h2>
-          <p ion-text item-right color="in">+8.75$</p>
+          <p ion-text item-right color="in">+8.75$ IN</p>
         </ion-item>
       </ion-item-group>
     </ion-list>
