--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -27,7 +27,7 @@
         Manage Currencies
       </button>
 
-      <button ion-item>
+      <button ion-item (click)="logoutPrompt()">
         <ion-icon name="log-out" item-left></ion-icon>
         Sign out
       </button>
