--- a/src/pages/modals/acceptDecline-modal/acceptdecline-modal.html
+++ b/src/pages/modals/acceptDecline-modal/acceptdecline-modal.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>
-            Accept or Decline Transactions
+            Transfer
         </ion-title>
         <ion-buttons start>
             <button ion-button (click)="dismiss()">
@@ -13,6 +13,8 @@
 </ion-header>
 
 <ion-content padding>
+
+  <div>{{transfer.message}}</div>
     <button ion-button (click)="accept()">Accept</button>
     <button ion-button (click)="decline()">Decline</button>
 
