--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -21,13 +21,13 @@
 
   <div [ngSwitch]="action">
     <ion-list *ngSwitchCase="'pending'">
-      <ion-item>
-        <ion-label text-center stacked>Transfer Token</ion-label>
-        <ion-input [(ngModel)] = "token" placeholder="Token" min="128" max="128" required>{{token}}</ion-input>
+      <ion-item *ngFor="let transfer of transfers" (click)="showAcceptDeclineModal(transfer)">
+        <ion-avatar item-left>
+          <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
+        </ion-avatar>
+        <h2>{{transfer.sender}}</h2>
+        <p ion-text item-right color="in">+{{transfer.amount}}</p>
       </ion-item>
-      <div text-center>
-        <button ion-button type="submit" (click)="receive()">Accept</button>
-      </div>
     </ion-list>
 
     <ion-list *ngSwitchCase="'history'">
