--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs #myTabs>
-  <ion-tab [root]="tab1Root" [rootParams] = "transferParams" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Manage" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Send" tabIcon="send"></ion-tab>
   <ion-tab [root]="tab4Root" [rootParams] = "transferParams" tabTitle="Transfers" tabIcon="filing"></ion-tab>
