--- a/src/pages/transfers/transfers.html
+++ b/src/pages/transfers/transfers.html
@@ -10,56 +10,33 @@
 <ion-content padding>
   <div padding>
     <ion-segment [(ngModel)]="action">
-      <ion-segment-button value="pending" >
-        Pending
-      </ion-segment-button>
       <ion-segment-button value="history">
-        History
+        Incoming
+      </ion-segment-button>
+      <ion-segment-button value="pending">
+        Outgoing
       </ion-segment-button>
     </ion-segment>
   </div>
 
   <div [ngSwitch]="action">
     <ion-list *ngSwitchCase="'pending'">
-      <ion-item *ngFor="let transfer of pendingTransfers" (click)="showAcceptDeclineModal(transfer)">
+      <ng-container *ngIf="pending!=undefined">
+        <ion-item *ngFor="let transfer of pending.data" (click)="showTransferModal(transfer)">
+          {{transfer.receiver.name}}
+          <p ion-text item-right color="out">{{transfer.amount}} OUT</p>
+        </ion-item>
+      </ng-container>
+    </ion-list>
+    
+    <ion-list *ngSwitchCase="'history'">
+       <ion-item *ngFor="let transfer of pendingTransfers" (click)="showAcceptDeclineModal(transfer)">
         <ion-avatar item-left>
           <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
         </ion-avatar>
         <h2>{{transfer.sender}}</h2>
         <p ion-text item-right color="in">+{{transfer.amount}}</p>
       </ion-item>
-    </ion-list>
-
-    <ion-list *ngSwitchCase="'history'">
-        <ion-item-group>
-          <ion-item-divider ion-text color="light">January 09, 2016</ion-item-divider>
-          <ion-item>
-            <ion-avatar item-left>
-              <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
-            </ion-avatar>
-            <h2>FName LName</h2>
-            <p ion-text item-right color="in">+7.30$ IN</p>
-          </ion-item>
-        </ion-item-group>
-
-      <ion-item-group>
-        <ion-item-divider ion-text color="light">January 4, 2016</ion-item-divider>
-        <ion-item>
-          <ion-avatar item-left>
-            <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
-          </ion-avatar>
-          <h2>FName LName</h2>
-          <p ion-text item-right color="out">-5.45$ OUT</p>
-        </ion-item>
-
-        <ion-item>
-          <ion-avatar item-left>
-            <img src="https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/user_male2-512.png">
-          </ion-avatar>
-          <h2>FName LName</h2>
-          <p ion-text item-right color="in">+8.75$ IN</p>
-        </ion-item>
-      </ion-item-group>
     </ion-list>
   </div>
 
